--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=7.3.0",
         "joshbrw/laravel-module-installer": "^v2.0.1",
-        "bitpay/sdk": "~6.0.2"
+        "bitpay/sdk": "v6.0.2111"
         
     },
     "autoload": {
